munin (2.999.5-1) experimental; urgency=medium

  * New upstream version. (Closes: #847649)
  * Replace dependency on fonts-dejavu with one on fonts-dejavu-core.

 -- Holger Levsen <holger@debian.org>  Mon, 02 Jan 2017 14:16:24 +0100

munin (2.999.4-1) experimental; urgency=medium

  * New upstream version, see upstream ChangeLog for details.

 -- Holger Levsen <holger@debian.org>  Tue, 06 Dec 2016 13:58:43 +0100

munin (2.999.3-2) experimental; urgency=medium

  * The "all thanks to lintian"-release:
  * debian/control:
    - replace depends on mysql-client with one on default-mysql-client.
    - remove dependency on perl-modules as munin-async already depends on
      ${perl:Depends}.
    - add a depends on lsb-base (>= 3.0-6) for the munin binary package.
  * debian/munin.munin-httpd.service: remove whitespace from key definition.

 -- Holger Levsen <holger@debian.org>  Wed, 02 Nov 2016 11:59:09 +0100

munin (2.999.3-1) experimental; urgency=medium

  [ Holger Levsen ]
  * Imported upstream release 2.999.3 (Closes: #773802)

 -- Holger Levsen <holger@debian.org>  Thu, 29 Sep 2016 12:28:34 +0200

munin (2.1.9-1) experimental; urgency=medium

  [ Holger Levsen ]
  * Add "Testsuite: autopkgtest" to source entry in debian/control, so
    ci.debian.net will automatically pick it up.

  [ Stig Sandbeck Mathisen ]
  * Add new packaging guide
  * Update debian/gbp.conf to reflect new packaging guide
  * Import upstream release 2.1.7
  * Remove patches included in this release
  * munin-common: add dependency on liblog-dispatch-perl

  [ Holger Levsen ]
  * Move suggests to libcache-cache-perl and libdbd-mysql-perl from munin-node
    to munin-plugins-extra. (Closes: #698078)
  * debian/control: Add suggests to libnet-dns-perl to munin-plugins-core.
    (Closes: #705260)

  [ Stig Sandbeck Mathisen ]
  * Imported upstream release 2.1.8
  * Imported upstream release 2.1.9
  * Add dependency on libhtml-template-pro-perl
