@@ -1,0 +1,17 @@
+From 69d69336123b39ff41b8bfc9a9cf2cdac82b2f3a Mon Sep 17 00:00:00 2001
+From: Holger Levsen <holger@layer-acht.org>
+Date: Wed, 11 Jan 2017 00:30:57 +0100
+Subject: [PATCH] fixup 2.999.5 release
+
+Signed-off-by: Holger Levsen <holger@layer-acht.org>
+---
+ plugins/node.d/http_loadtime | 0
+ 1 file changed, 0 insertion(+), 0 deletion(-)
+ mode change 100644 => 100755 plugins/node.d/http_loadtime
+
+diff --git a/plugins/node.d/http_loadtime b/plugins/node.d/http_loadtime
+old mode 100644
+new mode 100755
+-- 
+2.1.4
+
