@@ -1,9 +1,10 @@
 munin (2.999.5-1) experimental; urgency=medium
 
-  * New upstream version. (Closes: #847649)
+  * New upstream version (Closes: #847649) with
+    0001-fixup-2.999.5-release.patch applied.
   * Replace dependency on fonts-dejavu with one on fonts-dejavu-core.
 
- -- Holger Levsen <holger@debian.org>  Mon, 02 Jan 2017 14:16:24 +0100
+ -- Holger Levsen <holger@debian.org>  Wed, 11 Jan 2017 00:31:30 +0100
 
 munin (2.999.4-1) experimental; urgency=medium
 
